fix settings position on mobile

--- a/client/src/style/mobile.sass
+++ b/client/src/style/mobile.sass
@@ -5,6 +5,12 @@ $mobile-width: 90%
 		.container
 			width: $mobile-width !important
 
+		.settings .settings-open
+			position: absolute
+			left: 0
+			right: 0
+			margin: 0 auto
+
 	main
 		width: $mobile-width !important
 
@@ -16,3 +22,8 @@ $mobile-width: 90%
 
 				.place
 					margin: 0 5px 10px !important
+
+	#g-signin2
+		width: 50px
+		overflow: hidden
+		border-radius: 2px
